1999-04-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* configure.in: Remove --disable-wm-command and
	--disable-wm-transient-for.
	Require GTK+ version 1.2.0 or later.
	Add AC_ISC_POSIX test.
	Move GNU get text to later.

	* main.cc: Include <cstdio> and <exception>.

	* about.cc: Include <cstdlib> and <cstdio>.

1999-03-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (update-po): New target.

1999-03-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (clean): Removed.
	(main): Remove use of clean and add clean-up after gtk_main.

1999-02-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (about_dialog): Rewrote using auto_widget.
	(populate): Likewise.

	* autowidget.h: New file.
	* Makefile.am (noinst_HEADERS): Add autowidget.h.

	* options.cc: Add an excetion to license terms.

	* README: Modified.

	* README.ja: New file.
	* Makefile.am (EXTRA_DIST): Add README.ja.

	* NEWS: Updated.

	* about.cc: Add an exception to license terms.
	* glclock.cc: Likewise.
	* glclock.h: Likewise.
	* main.cc: Likewise.
	* module.cc: Likewise.
	* module.h: Likewise.
	* simple.c: Likewise.
	* simple.h: Likewise.

1999-02-21  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* README: Modified.

	* main.cc: Undef inline at first.
	Modify comments.
	(main): Add exception handling.
	(main): Use EXIT_SUCCESS.
	Undef SESSION if GTK+ 1.1 or later.

1999-02-17  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot): Add suffix with x to VERSION.

1999-02-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* options.cc (populate): Add the Rendering tab.

	* glclock.cc (edit_options): New function.  Update the header too.
	(glclock): Add the function to the popup menu.
	(glclock): Move a comment.

	* options.cc: New file.
	* Makefile.am (rglclock_SOURCES): Add options.cc.

	* glclock.h (class options_dialog): New class.

	* gtkrc: New file.
	* Makefile.am (pkgdata_DATA): Add gtkrc.
	(EXTRA_DIST): Add gtkrc.
